<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/top_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="start"
            android:text="@string/Name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top"/>

        <EditText
            android:id="@+id/NameFill"
            android:layout_width="400dp"
            android:layout_height="48dp"
            android:inputType="text"
            android:hint="@string/AutofillName"
            android:autofillHints="@string/AutofillName"
            android:layout_marginHorizontal="10dp"
            android:gravity="start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_end"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="start"
            android:text="@string/Email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/NameFill"/>

        <EditText
            android:id="@+id/Email_Main"
            android:layout_width="400dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:autofillHints="@string/AutofillEmail"
            android:gravity="start"
            android:hint="@string/AutofillEmail"
            android:inputType="textEmailAddress"
            android:textColorHint="#8D6E63"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/Preferance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/Email_Main"
            android:gravity="start"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="10dp"
            android:text="@string/Choice"/>

        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/Preferance"
            app:layout_constraintStart_toStartOf="parent">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Yes"
                android:layout_margin="2dp"
                android:padding="10dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/No"
                android:layout_margin="2dp"
                android:padding="10dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Maybe"
                android:layout_margin="2dp"
                android:padding="10dp"/>

        </RadioGroup>

        <TextView
            android:id="@+id/checkboxes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/Enquiry"
            app:layout_constraintTop_toBottomOf="@id/radio"
            app:layout_constraintStart_toStartOf="parent"/>

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/checkboxes"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/Instagram"/>
        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/checkbox1"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/Facebook"/>
        <CheckBox
            android:id="@+id/checkbox3"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/checkbox2"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/WebSurfing"/>

        <CheckBox
            android:id="@+id/checkbox4"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/checkbox3"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/Youtube"/>
        <CheckBox
            android:id="@+id/checkbox5"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/checkbox4"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/College"/>
        <CheckBox
            android:id="@+id/checkbox6"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/checkbox5"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/Twitter"/>
        <CheckBox
            android:id="@+id/checkboxend"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/checkbox6"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/Others"/>

        <TextView
            android:id="@+id/imagestart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/checkboxend"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/images"/>
        <GridLayout
            android:id="@+id/grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/imagestart"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/dog"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/it_s_a_dog"
                android:paddingEnd="20dp"
                android:src="@drawable/dog"
                tools:ignore="RtlSymmetry,ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/dog"
                android:text="@string/_1"
                tools:ignore="VisualLintOverlap" />

            <ImageView
                android:id="@+id/cat"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_row="0"
                android:layout_column="1"
                android:contentDescription="@string/it_s_a_cat"
                android:src="@drawable/cat"
                app:layout_constraintEnd_toEndOf="@id/dog"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cat"
                android:gravity="center"
                android:text="@string/_2"/>
        </GridLayout>

        <RadioGroup
            android:id="@+id/radioone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/grid"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="10dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"/>
        </RadioGroup>
        <CheckBox
            android:id="@+id/lastbutton"
            app:layout_constraintTop_toBottomOf="@id/radioone"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Conditions"
            tools:ignore="VisualLintLongText,VisualLintButtonSize"/>
        <Button
            android:id="@+id/submitbuttonhome"
            app:layout_constraintTop_toBottomOf="@id/lastbutton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textSize="20sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>