<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage"
    android:orientation="vertical"
    android:background="@drawable/loginfrongbg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_margin="20dp"
            android:layout_marginTop="104dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/frontloginlogo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.05"
            />

        <EditText
            android:id="@+id/inputfield1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:autofillHints="Username"
            android:backgroundTint="@color/black"
            android:backgroundTintMode="add"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/inputfield2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:autofillHints="Password"
            android:backgroundTint="@color/black"
            android:backgroundTintMode="add"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/inputfield1"
            app:layout_constraintStart_toStartOf="parent"/>

        <CheckBox
            android:id="@+id/conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/TermsConditions"
            app:layout_constraintTop_toBottomOf="@id/inputfield2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="5dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/register"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            app:layout_constraintTop_toBottomOf="@id/conditions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".15"/>

        <Button
            android:id="@+id/login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@id/conditions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".85"/>

        <TextView
            android:id="@+id/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:text="Or Login With"
            tools:ignore="HardcodedText"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="20dp"
            android:background="?android:attr/selectableItemBackground"
            android:backgroundTintMode="screen"
            android:contentDescription="@string/googleopen"
            android:scaleType="fitXY"
            android:scaleX=".8"
            android:scaleY=".8"
            android:src="@drawable/google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/options"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

        <ImageButton
            android:layout_marginVertical="20dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/facebookopen"
            android:scaleType="fitXY"
            android:scaleX="1"
            android:scaleY="1"
            android:src="@drawable/facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/options"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:layout_marginVertical="25dp"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/githubopen"
            android:scaleType="fitXY"
            android:scaleX="1"
            android:scaleY="1"
            android:src="@drawable/github"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/options"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>